# ReactOS-Kernel

./: CMakeLists.txt  README.md
base/: CMakeLists.txt
base/setup/: CMakeLists.txt
base/system/: CMakeLists.txt
base/system/smss_new/: CMakeLists.txt  smss.c  smss.rc
boot/freeldr/: CMakeLists.txt
dll/: CMakeLists.txt
drivers/wdm/: CMakeLists.txt
modules/: CMakeLists.txt
sdk/lib/: CMakeLists.txt
subsystems/: CMakeLists.txt
